# mvia-course-project

./: CMakeLists.txt  README.md
Hello_g++/: Hello_world  Hello_world.cpp
Hello_gcc/: Hello_world  Hello_world.c
sl/: Makefile  README.md  sl
